<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nebengers</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="login">Silakan masukkan username dan password sesuai dengan akun UI Anda.</string>
    <string name="login1"></string>
    <string name="login2">Silahkan masukkan data kontak anda</string>
    <string name="gmaps">Peta</string>
    
    <string name="about1">Version 0.3</string>
    <string name="about4">Universitas Indonesia - Vehicle Sharing Platform</string>
    <string name="about2">Copyright @2016 IOT Developer Team</string>
    <string name="about3">All right reserved</string>
    
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    
    <string name="jnama">Nama</string>
    <string name="jtujuan">Tujuan</string>
    <string name="jasal">Asal</string>
    <string name="jkapasitas">Kuota</string>
    <string name="npm">NPM</string>
    <string name="w_b">Waktu Berangkat</string>
    <string name="j_b">Jam Berangkat</string>
    <string name="sid">Id Pengguna </string>
    <string name="role">Status</string>
    <string name="j_k">Keterangan</string>
    
    <string name="w_s">13:45</string>
    <string name="setting">Jam</string>
    <string name="hint">Ketik Lokasi</string>
    <string name="id">Id Tebengan :</string>
    <string name="drop">Hapus</string>
    <string name="no_1">1</string>
    <string name="no_2">2</string>
    <string name="no_3">3</string>
    <string name="no_4">4</string>
    <string name="no_5">5</string>
    <string name="no_6">6</string>
    <string name="submit">Buat Tebengan</string>
    <string name="submit_contact">Daftarkan Kontak</string>
    <string name="refresh">MuatUlang</string>
    
    <string name="jekel">Jenis Kelamin</string>
    <string name="email">Email</string>
    <string name="jlokasi">Lokasi</string>
    <string name="jtelp">Telpon/Handphone</string>
    <string name="no_hp">Nomor Handphone</string>
    <string name="no_telp">Nomor Telpon</string>
    <string name="jstatus">Status</string>
    <string name="alamat">Alamat</string>
    <string name="nebeng">Nebeng</string>
    <string name="batal">Batal</string>
    <string name="no_hp1">Handphone</string>
    <string name="no_telp1">Telpon</string>
    <string name="back">Kembali</string>
    <string name="status">Status</string>
    <string name="spasi">         </string>

    <color name="white">#ffffffff</color>
    <color name="black">#ff000000</color>

    <!--for GCM-->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <!--for AutoComplete Place-->
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>

    <string-array name="capacities_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

</resources>
