<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/jasal" />

                <EditText
                    android:id="@+id/asal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/casal"
                    android:inputType="text"></EditText>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium">

                <fragment
                    android:id="@+id/autocomplete_fragment"
                    android:name="com.sumarnakreatip.uiiot.PlaceAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/jtujuan" />

                <EditText
                    android:id="@+id/tujuan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/ctujuan"
                    android:inputType="text"></EditText>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gmaps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jkapasitas" />

        <RadioGroup
            android:id="@+id/kuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/no_1"
                android:layout_weight="1"
                android:text="@string/no_1" />

            <RadioButton
                android:id="@+id/no_2"
                android:layout_weight="1"
                android:text="@string/no_2" />

            <RadioButton
                android:id="@+id/no_3"
                android:layout_weight="1"
                android:text="@string/no_3" />

            <RadioButton
                android:id="@+id/no_4"
                android:layout_weight="1"
                android:text="@string/no_4" />

            <RadioButton
                android:id="@+id/no_5"
                android:layout_weight="1"
                android:text="@string/no_5" />

            <RadioButton
                android:id="@+id/no_6"
                android:layout_weight="1"
                android:text="@string/no_6" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/w_b" />

        <TextView
            android:id="@+id/w_b"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/w_s"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/j_k" />

        <EditText
            android:id="@+id/j_k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <TextView
        android:text="@string/selected_place"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/place_details"
        android:autoLink="all"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/place_attribution"
        android:autoLink="all"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_medium" />

</LinearLayout>
