<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <!--android:background="@drawable/kotak_nebeng"  -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/profileSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/jnama"
        android:textIsSelectable="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/npm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/npm"
        android:textIsSelectable="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/role"
        android:textIsSelectable="true"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/tabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/titlebackgroundcolor"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/jnama"
                    android:textIsSelectable="true"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_hp1"
                    android:textIsSelectable="true"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textIsSelectable="true"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/jstatus"
                    android:textIsSelectable="true"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rowd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TextView01"
                    android:orientation="horizontal"
                    android:paddingBottom="1.0dip"
                    android:paddingLeft="4.0dip"
                    android:paddingRight="4.0dip"
                    android:paddingTop="5.0dip">

                    <ImageButton
                        android:id="@+id/batal"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:contentDescription="@string/batal"
                        android:src="@drawable/deletemark" />

                    <ImageButton
                        android:id="@+id/drop"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:contentDescription="@string/drop"
                        android:src="@drawable/checkmark" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
